<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="android.view.View.OnClickListener" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/bank_name_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bank_name"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/bank_name__edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_setting_dark"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/branch_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/branch_name"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/branch_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_setting_dark"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ifsc_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ifsc_code"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/ifsc_edt"
                        android:layout_width="match_parent"
                        android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_setting_dark"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/account_no_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_number"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:singleLine="true"
                        android:id="@+id/account_no_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:drawableRight="@drawable/ic_setting_dark" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_12"
                    android:text="@string/legal_entity_name_shall_be_used_as_beneficiary" />

                <CheckBox
                    android:id="@+id/current_chkb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_account" />

                <CheckBox
                    android:id="@+id/saving_chkb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saving_account" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@android:color/darker_gray"
            android:onClick="@{handler.onClick}"
            android:text="@string/next"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</layout>