<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="android.view.View.OnClickListener" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/primary_name_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12"
                    android:hint="Primary Contact Name"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/primary_name_wrapper_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_setting_dark"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/primary_phone_no_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12"
                    android:hint="@string/primary_contact_ph_no"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/primary_phone_no_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_setting_dark"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/primary_email_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12"
                    android:hint="@string/primary_contact_email_id"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/primary_email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_setting_dark" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/primary_contact_designation_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12"
                    android:hint="@string/primary_contact_designation"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/primary_contact_designation_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_setting_dark" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@android:color/darker_gray"
            android:onClick="@{handler.onClick}"
            android:text="@string/next"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</layout>