<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="handler"
        type="android.view.View.OnClickListener"/>
</data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:fillViewport="true"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/next_btn"
         android:id="@+id/scrollView"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/store_name_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12"
                    android:hint="@string/store_name_dba"

                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/store_name_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         android:singleLine="true"
                        android:drawableRight="@drawable/ic_setting_dark" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/legal_entity_name_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12"
                    android:hint="@string/legal_entity_name"
                    android:textColorHint="@android:color/darker_gray">

                    <EditText
                        android:id="@+id/legal_entity_name_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_setting_dark" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/owner_name_wrapper"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_marginRight="@dimen/dp_12"
                        android:layout_weight="1"
                        android:hint="business_name"
                        android:textColorHint="@android:color/darker_gray">

                        <EditText
                            android:id="@+id/owner_name_edt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"


                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/partnership_spinner"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/dp_12"
                        android:layout_marginRight="@dimen/dp_12"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_weight="1"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_12"
                    android:background="@color/color_e3e2e2"></View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_12"
                    android:text="Store Location"
                    android:textSize="@dimen/sp_14" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/store_location_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:hint="Complete Store Address "
                    android:textColorHint="@android:color/darker_gray">

                    <EditText
                        android:id="@+id/store_location_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tv_change_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="@{handler.onClick}"
                    android:clickable="true"
                    android:layout_marginRight="@dimen/dp_12"
                    android:text="@string/change_store_location" />

                <Spinner
                    android:id="@+id/store_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:layout_marginRight="@dimen/dp_12"
                    android:layout_marginTop="@dimen/dp_12">

                </Spinner>


            </LinearLayout>

        </ScrollView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@android:color/darker_gray"
            android:text="@string/next"
            android:id="@+id/next_btn"
            android:onClick="@{handler.onClick}"
            android:layout_marginBottom="@dimen/dp_40"
            android:textColor="@android:color/white" />
<ProgressBar
    android:layout_width="wrap_content"
    android:id="@+id/progressbar"
    android:layout_centerInParent="true"
    android:layout_height="wrap_content" />

    </RelativeLayout>
</layout>